<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@+id/book_purohit">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout
    android:id="@+id/layout_one"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@mipmap/android_logo"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/purohith_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".75"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_marginTop="5dp"/>
        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/circle"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:id="@+id/rating"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="#000"/>
        </LinearLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
<TextView
    android:id="@+id/error_message"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:textSize="16sp"/>
<LinearLayout
    android:id="@+id/amount_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_below="@+id/layout_one"
    android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/advance_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="Advance Amount"
            android:textSize="16sp"
            android:textColor="#000"
            android:gravity="center"/>
        <TextView
            android:id="@+id/balance_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="Balance Amount"
            android:textSize="16sp"
            android:textColor="#000"
            android:gravity="center"/>

</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/advance_amount"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:textColor="#000"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/balance_amount"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:textColor="#000"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:gravity="center"/>
</LinearLayout>
<LinearLayout
    android:id="@+id/layout_two"
    android:layout_below="@+id/amount_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:background="@drawable/listview_background_stroke"
    android:padding="8dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_forbooking"
        android:textColor="#000"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/note_text"
        android:textColor="#000"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/travel_text"
        android:textSize="16sp"
        android:textColor="#000"
        android:textScaleX="1.1"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/point_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/puja_prasadam"
        android:textColor="#000"
        android:textSize="16sp"
        android:textScaleX="1.1"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/point_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/fruits_note"
        android:textColor="#000"
        android:textSize="16sp"
        android:textScaleX="1.1"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/point_four"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/purohith_availability"
        android:textSize="16sp"
        android:textColor="#000"
        android:textScaleX="1.1"
        android:visibility="gone"/>
</LinearLayout>
<LinearLayout
    android:id="@+id/layout_three"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/layout_two"
    android:orientation="vertical"
    android:background="@drawable/listview_background_stroke"
    android:layout_marginTop="10dp"
    android:padding="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/search_sect_round"/>
        <TextView
            android:id="@+id/purohith_sect"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:textColor="#000"
            android:textSize="16sp"
            android:gravity="center_vertical"/>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="horizontal"
    android:visibility="gone">
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/education_icon"/>
    <TextView
        android:id="@+id/purohith_univercity"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="16sp"
        android:textColor="#000"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"/>
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="horizontal">
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/location_image"/>
    <TextView
        android:id="@+id/purohith_location"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textColor="#000"
        android:textSize="16sp"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical"/>
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="horizontal"
    android:visibility="gone">
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/education_icon"/>
    <TextView
        android:id="@+id/purohith_guru_name"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:textSize="16sp"
        android:textColor="#000"
        android:gravity="center_vertical"/>
</LinearLayout>
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_below="@+id/layout_three"
    android:layout_marginTop="10dp">
    <TextView
        android:id="@+id/puja_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
</LinearLayout>
</ScrollView>

    <Button
        android:id="@+id/book_purohit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/red"
        android:text="Book Purohit"
        android:textColor="#fff"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>